--- a/HueCorrectionEditor.xaml
+++ b/HueCorrectionEditor.xaml
@@ -8,13 +8,14 @@
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=local:HueCorrectionEditorViewModel}"
-             d:DesignHeight="450" d:DesignWidth="450">
+             d:DesignHeight="600" d:DesignWidth="450">
 
     <UserControl.Resources>
         <local:AngleToPointConverter x:Key="AngleToPointConverter" />
         <local:ValueToCenterYConverter x:Key="ValueToCenterYConverter" />
         <local:IsSelectedConverter x:Key="IsSelectedConverter" />
         <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <local:IsNotNullToBooleanConverter x:Key="IsNotNullToBooleanConverter" />
 
         <Style TargetType="Thumb" x:Key="ControlPointThumb">
             <Setter Property="Width" Value="12"/>
@@ -79,6 +80,7 @@
             <RowDefinition Height="180" />
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -188,7 +190,45 @@
                     TickFrequency="0.01" SmallChange="0.01" LargeChange="0.1"/>
         </StackPanel>
 
-        <c:PropertiesEditor Grid.Row="4" 
+        <Grid Grid.Row="4" Margin="0,10,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <ListBox Grid.Row="0" ItemsSource="{Binding IgnoredColors}" SelectedItem="{Binding SelectedIgnoredColor}" MinHeight="80">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Rectangle Width="16" Height="16" Margin="0,0,5,0" Stroke="Gray" StrokeThickness="0.5">
+                                <Rectangle.Fill>
+                                    <SolidColorBrush Color="{Binding Color}"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <TextBlock Text="{Binding Color}" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <Grid Grid.Row="1" Margin="0,5,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <c:ColorPicker Grid.Column="0" 
+                               Value="{Binding SelectedIgnoredColor.Color, UpdateSourceTrigger=PropertyChanged}" 
+                               IsEnabled="{Binding SelectedIgnoredColor, Converter={StaticResource IsNotNullToBooleanConverter}}"
+                               BeginEdit="ColorPicker_BeginEdit"
+                               EndEdit="ColorPicker_EndEdit"/>
+                <Button Grid.Column="1" Content="追加" Command="{Binding AddIgnoredColorCommand}" Margin="5,0,0,0"/>
+                <Button Grid.Column="2" Content="削除" Command="{Binding RemoveIgnoredColorCommand}" Margin="5,0,0,0"/>
+            </Grid>
+        </Grid>
+
+        <c:PropertiesEditor Grid.Row="5" 
                             Target="{Binding SelectedPoint}"
                             Margin="0,10,0,0"
                             IsEnabled="{Binding IsPointSelected}"
